<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/fondo"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivFondo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/fondo1" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="0dp"
            android:layout_height="93dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <Button
            android:id="@+id/bJugar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/boton_jugar"
            android:onClick="jugar"
            android:text="@string/jugar"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilNombreJ2" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilNombreJ1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="24dp"
            android:textColorHint="@android:color/background_light"
            app:boxBackgroundColor="@android:color/background_light"
            app:boxStrokeColor="@android:color/background_light"
            app:counterMaxLength="8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etNombreJ1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NombreJ1"
                android:maxLength="8"
                android:textColor="@android:color/background_light" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilNombreJ2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:textColorHint="@android:color/background_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilNombreJ1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etNombreJ2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NombreJ2"
                android:maxLength="8"
                android:textColor="@android:color/background_light" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/lyConfiguracion"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_marginStart="24dp"
            android:onClick="abrirConfiguracion"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bJugar">

            <ImageView
                android:id="@+id/ivIcon"
                android:layout_width="49dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ajustes" />

            <TextView
                android:id="@+id/tvConf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ajustes"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>